# sublinear-time-solver

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  package.json
docs/: FINAL_PERFORMANCE_ANALYSIS.md  MCP_DENSE_FIX_COMPLETE.md  PERFORMANCE_FIX_SUMMARY.md  benchmark_results_2025-09-19.json  cli.md  github-topics-analysis.md  pagerank_comparison.md  pagerank_comparison_report.md
docs/algorithms/: README.md  algorithms.md  hybrid-algorithm-implementation.md
docs/api/: README.md  api.md
docs/architecture/: README.md
docs/benchmarks/: BENCHMARK_REPORT.md  BMSSP_BENCHMARKS.md  README.md  benchmark-2025-09-19T20-28-25.json  benchmark-report-2025-09-19.md  optimization-guide.md
docs/blog/: 001-the-speed-frontier.md  002-certificates-of-confidence.md  README.md
docs/config/: claude-desktop-config.json
docs/performance/: performance_report.md
docs/proofs/: PROOF_CERTIFICATE.md  README.md
docs/reference/: MCP_DENSE_FIX_COMPLETE.md  MCP_MATRIX_FORMAT_GUIDE.md  MCP_TOOL_TEST_RESULTS.md  README.md  WASM_STATUS.md
docs/reports/: FINAL_PERFORMANCE_ANALYSIS.md  README.md  SOLVER_FIXES_SUMMARY.md  TESTING_DELIVERABLES.md  TESTING_REPORT.md  TEST_REPORT.md  convergence-system-report.md  network_flow_analysis_20250919_213311.md  performance_charts.md  social_network_comparison.md
docs/temporal/: README.md  TEMPORAL_COMPUTATIONAL_LEAD.md  faster_than_light_information_theory.md  ftl_calculations.js
docs/testing/: README.md  benchmark_report.json  generated_matrix.json  test_matrix.json  test_report.json
docs/validation/: VALIDATION_AGENT_REPORT.md  VALIDATION_REPORT.md
examples/: README.md  basic-usage.js  run-examples.js  rust_benchmark.rs
examples/data/: financial-data.json  sample-networks.json
examples/data-integration/: real-time-feeds.js
examples/financial-trading/: README.md  high-frequency-arbitrage.js  portfolio-optimization.js
examples/matrix-solving/: README.md  heat-transfer-simulation.js
examples/network-analysis/: README.md  social-influence-analysis.js
examples/performance-benchmarks/: comprehensive-benchmark.js
examples/temporal-advantage/: temporal-calculations.js
examples/utils/: data-loader.js  matrix-generator.js  performance-monitor.js
plans/: README.md
scripts/: build.sh  create-github-epic.sh  run-benchmarks.js
scripts/linear_systems/: README.md  benchmark_suite.py  comprehensive_benchmark.py  convergence_analyzer.py  iterative_solvers.py  matrix_generators.py  performance_analysis.py  sublinear_solvers.py  test_generator.py  traditional_solvers.py
src/: bmssp.rs  index.ts  lib.rs  math_wasm.rs  wasm.rs
temporal-lead-solver/: Cargo.toml  README.md
tests/: README.md
(+122 files in other folders)
